Added create and new actions to Portfolio

--- a/app/views/portvolios/index.html.erb
+++ b/app/views/portvolios/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Portfolio</h1>
 
-<% @portvolio_items.each do |portfolio| %>
+<% @portfolio_items.each do |portfolio| %>
   <p><%= portfolio.title %></p>
   <p><%= portfolio.subtitle %></p>
   <p><%= portfolio.body %></p>
-  <%= image_tag portfolio.thumb_image %>
+  <%= image_tag portfolio.thumb_image if portfolio.thumb_image %>
 <% end %>
