--- a/app/views/portvolios/index.html.erb
+++ b/app/views/portvolios/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Portfolio</h1>
 
+<%= link_to "Create a new Portfolio", new_portvolio_path %>
+
 <% @portfolio_items.each do |portfolio| %>
   <p><%= portfolio.title %></p>
   <p><%= portfolio.subtitle %></p>
   <p><%= portfolio.body %></p>
   <%= image_tag portfolio.thumb_image if portfolio.thumb_image %>
+  <%= link_to "Edit", edit_portvolio_path(portfolio)%>
 <% end %>
