Implemented destroy action for portfolio

--- a/app/views/portvolios/show.html.erb
+++ b/app/views/portvolios/show.html.erb
@@ -3,4 +3,5 @@
 <p><%= @portfolio_item.body %></p>
 <%= image_tag @portfolio_item.main_image if @portfolio_item.thumb_image %>
 <%= link_to "Back", portvolios_path %> |
-<%= link_to "Edit", edit_portvolio_path(@portfolio_item)%>
+<%= link_to "Edit", edit_portvolio_path(@portfolio_item)%> |
+<%= link_to "Delete item", portvolio_path(@portfolio_item), method: :delete, data: { confirm:  "Are you sure?" } %>
