--- a/app/views/portvolios/index.html.erb
+++ b/app/views/portvolios/index.html.erb
@@ -4,4 +4,7 @@
 
 <% @portfolio_items.each do |portfolio_item| %>
   <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
+  <em><%= portfolio_item.subtitle %></em>
+  <p><%= portfolio_item.body %></p>
+  <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image %>
 <% end %>
