--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Homepage</h1>
+<h1>Hi, <%= current_user.first_name if current_user %> welcome to homepage</h1>
 <%= @posts.inspect %>
 
 <h1>Skill</h1>
