Implemented null object pattern

--- a/app/views/portvolios/show.html.erb
+++ b/app/views/portvolios/show.html.erb
@@ -4,7 +4,7 @@
 
 <p><%= @portfolio_item.body %></p>
 
-<%= image_tag @portfolio_item.main_image if @portfolio_item.main_image %>
+<%= image_tag @portfolio_item.main_image %>
 
 <h2>Technologies used: </h2>
 <% @portfolio_item.technologies.each do |technology| %>
