--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <div>
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About me", about_me_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %></div>
-      <div><%= link_to "Portfolio", portvolios_path %></div>
-    </div>
+    <%= render 'shared/nav' %>
 
     <!-- check the class if its User or OpenStruct-->
     <!-- two ways is_a?(OpenStruct) or User OR simply pass User model-->
