Implemented partials with locals for portfolio for navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render 'shared/nav' %>
+    <%= render 'shared/nav', location: 'top' %>
 
     <!-- check the class if its User or OpenStruct-->
     <!-- two ways is_a?(OpenStruct) or User OR simply pass User model-->
