--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,9 @@
-<div>
-  <div><%= link_to "Home", root_path %></div>
-  <div><%= link_to "About me", about_me_path %></div>
-  <div><%= link_to "Contact", contact_path %></div>
-  <div><%= link_to "Blog", blogs_path %></div>
-  <div><%= link_to "Portfolio", portvolios_path %></div>
+<div class="<%= location %>" >
+  <div>
+    <div><%= link_to "Home", root_path %></div>
+    <div><%= link_to "About me", about_me_path %></div>
+    <div><%= link_to "Contact", contact_path %></div>
+    <div><%= link_to "Blog", blogs_path %></div>
+    <div><%= link_to "Portfolio", portvolios_path %></div>
+  </div>
 </div>
