--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,8 @@
 
     <%= render 'shared/nav', location: 'top' %>
 
-    <!-- check the class if its User or OpenStruct-->
-    <!-- two ways is_a?(OpenStruct) or User OR simply pass User model-->
-    <% if current_user.is_a?(User) %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Login", new_user_session_path %>
-      <%= link_to "Register", new_user_registration_path %>
-    <% end %>
+    <%= login_helper %>
+
     <%= yield %>
 
     <% if session[:source] %>
