--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,8 +20,7 @@
 
 <%= render 'shared/nav', location: 'bottom' %>
 
-<% if session[:source] %>
-  <p>Thanks for visiting <%= session[:source] %></p>
-<% end %>
+<%= source_helper("blog") %>
+
 </body>
 </html>
