--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Date Created</th>
       <th>Body</th>
       <th>Status</th>
       <th colspan="3"></th>
