Implemented bootstrap gem and styles

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,7 +1,8 @@
-body {
-  background-color: aquamarine;
-}
-
-.bottom a {
-  color: green;
-}
+//body {
+//  background-color: aquamarine;
+//}
+//
+//.bottom a {
+//  color: green;
+//}
+@import "bootstrap";
