--- a/app/assets/stylesheets/portvolios.scss
+++ b/app/assets/stylesheets/portvolios.scss
@@ -1,8 +1,9 @@
-body {
-  background-color: #B5651D;
-  color: white;
-}
-
-.bottom a {
-  color: blue;
-}
+//body {
+//  background-color: #B5651D;
+//  color: white;
+//}
+//
+//.bottom a {
+//  color: blue;
+//}
+@import "bootstrap";
