--- a/app/views/portvolios/show.html.erb
+++ b/app/views/portvolios/show.html.erb
@@ -12,5 +12,6 @@
 <% end %>
 
 <%= link_to "Back", portvolios_path %> |
-<%= link_to "Edit", edit_portvolio_path(@portfolio_item)%> |
-<%= link_to "Delete item", portvolio_path(@portfolio_item), method: :delete, data: { confirm:  "Are you sure?" } %>
+<%= link_to "Edit", edit_portvolio_path(@portfolio_item) if logged_in?(:site_admin) %> |
+<%= link_to "Delete item", portvolio_path(@portfolio_item), method: :delete,
+            data: { confirm:  "Are you sure?" } if logged_in?(:site_admin) %>
