--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Should we work together?</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Address</h3>
+
+    <p>21 Overlook Ridge, Ter apt 540</p>
+
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "4752016595" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:nikhilc.developer@gmail.com?subject=PortfolioContact", "email me">Click to mail</a> </p>
+  </div>
+
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.386645737707!2d-71.02377584902068!3d42.440788837890125!2m3!1f0!2f0!3f0!3m2!1i1024!
+    2i768!4f13.1!3m3!1m2!1s0x89e37214ca10cd05%3A0x6bff0f9a3d608145!2s21+Overlook+Ridge+Terrace%2C+Revere%2C+MA+02151!5e0!3m2!1sen!2sus!4v1551488525989"
+    width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>  </div>
+</div>
