--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -6,11 +6,11 @@
   <div class="col-md-6">
     <h3>Address</h3>
 
-    <p>21 Overlook Ridge, Ter apt 540</p>
+    <p>12 Work Hard street, apt 25 </p>
 
     <h3>Phone</h3>
 
-    <p><%= number_to_phone "4752016595" %></p>
+    <p><%= number_to_phone "1234567890" %></p>
 
     <h3>Email</h3>
 
