--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome.</h1>
+  <p class="lead">
+    If you are searching for that one person who will change your life, take a look in the mirror. Any work you put in 100% then you will be successfull
+  </p>
   <p class="lead">
     <%= link_to "Learn more", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
