Added stylings for devise registration edit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="inner cover">
   <h1 class="cover-heading">Welcome.</h1>
   <p class="lead">
-    If you are searching for that one person who will change your life, take a look in the mirror. Any work you put in 100% then you will be successfull
+    If you are still searching for that one person who will change your life, take a look in the mirror. Any work you put in 100% then you will be successfull
   </p>
   <p class="lead">
     <%= link_to "Learn more", about_me_path, class: "btn btn-lg btn-secondary" %>
