--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,3 +159,16 @@ body {
     width: 50rem;
   }
 }
+
+/*
+ * Custom styles
+ */
+
+.card-block {
+  color: black;
+  text-align: left;
+}
+
+.auth-links a {
+  color: black
+}
