--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,17 +44,20 @@
           <div class="form-group">
             <%= f.submit "Update", class: "btn btn-primary" %>
           </div>
+
         <% end %>
       </div>
 
       <div class="col-md-4">
-        <h3>Cancel my account</h3>
+        <h3>Cancel account</h3>
 
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" },
                                   method: :delete, class: 'btn btn-danger' %></p>
       </div>
 
     </div>
-    <%= link_to "Back", :back%>
+    <div class="auth-links">
+      <%= link_to "Back", :back %>
+    </div>
   </div>
 </div>
