--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-block">
+  <div class="card-body">
     <div class="row">
       <div class="col-md-8">
         <h2>Edit <%= resource_name.to_s.humanize %></h2>
@@ -42,7 +42,7 @@
           </div>
 
           <div class="form-group">
-            <%= f.submit "Update", class: "btn btn-primary" %>
+            <%= f.submit "Update", class: 'btn btn-primary' %>
           </div>
 
         <% end %>
