--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-block">
+  <div class="card-body">
 
     <h2>Sign up</h2>
 
@@ -39,8 +39,8 @@
 
         </div>
 
-        <div class="col-md-9"></div>
-        <div class="col-md-3">
+        <div class="col-md-10"></div>
+        <div class="col-md-2">
           <div class="form-group">
             <%= f.submit "Sign up", class: 'btn btn-primary btn-block' %>
           </div>
