Passed default style to empty string if no style present and redirected portfolio and blog html file to application_nav html for now

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -18,7 +18,7 @@
 
 <%= yield %>
 
-<%= render 'shared/nav', location: 'bottom' %>
+<%= render 'shared/application_nav' %>
 
 <%= source_helper("Portfolio") %>
 
