--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -14,7 +14,7 @@
 
     <h3>Email</h3>
 
-    <p><a href="mailto:nikhilc.developer@gmail.com?subject=PortfolioContact", "email me">Click to mail</a> </p>
+    <p><a href="mailto:nikhilc.developer@gmail.com?subject=PortfolioContact" "email me">Click to mail</a> </p>
   </div>
 
   <div class="col-md-6">
