--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,8 +19,9 @@
   <!--start of header-->
   <div class="blog-header">
     <div class="container">
-      <h1 class="blog-title">The Bootstrap Blog</h1>
+      <h1 class="blog-title">My Blog </h1>
       <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+      <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
     </div>
   </div>
   <!--end of header-->
@@ -66,6 +67,9 @@
         </div>
       </div>
 
+      <!--end of row-->
+    </div>
+
       <!--end of blog sidebar-->
 
     <footer class="blog-footer">
@@ -76,11 +80,8 @@
     </footer>
 
     <%= source_helper("blog") %>
-
-    <!--end of row-->
+    <!--  end of container-->
   </div>
-<!--  end of container-->
-</div>
 
 </body>
 </html>
