--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
+<div class="col-sm-8 blog-main"><p>
   <strong>Title:</strong>
   <%= @blog.title %>
 </p>
@@ -12,3 +10,5 @@
 
 <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
 <%= link_to 'Back', blogs_path if logged_in?(:site_admin) %>
+
+</div>
