--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,39 +16,22 @@
 
   <%= render 'shared/blog_nav' %>
 
-  <!--start of header-->
-  <div class="blog-header">
-    <div class="container">
-      <h1 class="blog-title">My Blog </h1>
-      <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-      <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
-    </div>
-  </div>
-  <!--end of header-->
+  <%= render 'shared/blog_masthead' %>
 
-  <!--start of container-->
   <div class="container">
-    <!-- start of row-->
+
     <div class="row">
 
       <%= yield %>
 
         <%= render 'shared/blog_sidebar' %>
 
-      <!--end of row-->
     </div>
 
-      <!--end of blog sidebar-->
-
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
+    <%= render 'shared/blog_footer' %>
 
     <%= source_helper("blog") %>
-    <!--  end of container-->
+
   </div>
 
 </body>
