--- a/app/views/portvolios/_portfolio_item.html.erb
+++ b/app/views/portvolios/_portfolio_item.html.erb
@@ -1,4 +1,14 @@
-<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
-<em><%= portfolio_item.subtitle %></em>
-<p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.thumb_image %>
+<div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image %>
+    <div class="card-body">
+      <p class="card-text">
+        <span><%= portfolio_item.title%></span>
+        <%= portfolio_item.subtitle %>
+      </p>
+      <div class="d-flex justify-content-between align-items-center">
+        <small class="text-muted">9 mins</small>
+      </div>
+    </div>
+  </div>
+</div>
