--- a/app/views/portvolios/_form.html.erb
+++ b/app/views/portvolios/_form.html.erb
@@ -1,29 +1,42 @@
 <%= form_for @portfolio_item do |f| %>
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
 
-  <div class="field">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle %>
-  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </div>
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, class: 'form-control' %>
+      </div>
+    </div>
 
-  <ul>
-    <%= f.fields_for :technologies do |technology_form| %>
-      <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-      </li>
-    <% end %>
-  </ul>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, rows: 5, class: 'form-control' %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit %>
+
+    <div class="col-md-12">
+      <hr>
+      <h2>Technologies used</h2>
+      <div>
+        <%= f.fields_for :technologies do |technology_form| %>
+          <div class="form-group" >
+            <%= technology_form.label :name %>
+            <%= technology_form.text_field :name, class: 'form-control' %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Submit", class: 'btn btn-primary btn-block' %>
+      </div>
+
+    </div>
   </div>
 <% end %>
