--- a/app/views/portvolios/index.html.erb
+++ b/app/views/portvolios/index.html.erb
@@ -1,7 +1,7 @@
 <div class="album py-5 bg-light">
   <div class="container">
 
-    <div class="row">
+    <div class="row sortable">
       <!--naming conventions were different, so pass partial and collection-->
       <!--collection must be plural, partial name and inside content must be singular-->
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
