--- a/app/views/portvolios/_form.html.erb
+++ b/app/views/portvolios/_form.html.erb
@@ -2,6 +2,7 @@
 
   <div class="row">
     <div class="col-md-6">
+
       <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control' %>
@@ -11,6 +12,15 @@
         <%= f.label :subtitle %>
         <%= f.text_field :subtitle, class: 'form-control' %>
       </div>
+
+      <div class="form-group">
+        <%= f.file_field :thumb_image %>
+      </div>
+
+      <div class="form-group">
+        <%= f.file_field :main_image %>
+      </div>
+
     </div>
 
     <div class="col-md-6">
