--- a/app/views/portvolios/_portfolio_item.html.erb
+++ b/app/views/portvolios/_portfolio_item.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag portfolio_item.thumb_image if portfolio_item.thumb_image %>
     <div class="card-body", data-id="<%= portfolio_item.id %>">
       <p class="card-text">
-        <span><%= link_to portfolio_item.title, portfolio_item %></span>
+        <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
         <%= portfolio_item.subtitle %>
       </p>
       <div class="d-flex justify-content-between align-items-center">
