--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,13 +12,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :blog_title, class: 'form-control' %>
+    <%= form.text_field :title, id: :blog_title, class: 'form-control', placeholder: 'Title' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :blog_body, rows: 10, class: 'form-control' %>
+    <%= form.text_area :body, id: :blog_body, rows: 10, class: 'form-control', placeholder: 'Content' %>
   </div>
 
   <div class="form-group">
