--- a/app/views/portvolios/new.html.erb
+++ b/app/views/portvolios/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container portfolio-container">
 
   <h1>Create a New Portfolio</h1>
+<!--  locals new rails syntax: portfolio_item: @portfolio_item-->
   <%= render 'form', portfolio_item: @portfolio_item %>
 
-</div>s
+</div>
