--- a/app/views/portvolios/_form.html.erb
+++ b/app/views/portvolios/_form.html.erb
@@ -40,11 +40,12 @@
       <h2>Technologies used</h2>
       <div>
         <%= f.fields_for :technologies do |technology_form| %>
-          <div class="form-group" >
-            <%= technology_form.label :name %>
-            <%= technology_form.text_field :name, class: 'form-control' %>
-          </div>
+        <!-- f here is cocoon gem defaults-->
+          <%= render 'technology_fields', f: technology_form %>
         <% end %>
+
+        <!-- fhere is main form-->
+        <%= link_to_add_association 'Add Technology', f, :technologies %>
       </div>
 
       <div class="form-group">
