Integrated gritter for flash messages and customized blogs and portfolio form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
 
           <%= yield %>
 
+          <%= render 'shared/alerts' %>
+
           <%= render 'shared/application_footer' %>
 
           <%= source_helper("Application") %>
