--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "gritter";
 /*
  * Globals
  */
@@ -155,7 +156,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 50rem;
+    width: 55rem;
   }
 }
 
