--- a/app/views/portvolios/_form.html.erb
+++ b/app/views/portvolios/_form.html.erb
@@ -1,4 +1,12 @@
 <%= form_for portfolio_item do |f| %>
+  <% if portfolio_item.errors.any? %>
+    <div id="error_explanation">
+      <% portfolio_item.errors.full_messages.each do |error| %>
+        <%= js add_gritter(error, :title => "Errors!", :sticky => false) %>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="row">
     <div class="col-md-6">
