Refactored alerts into helper methods

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,14 +15,15 @@
 <body>
 
   <%= render 'shared/portfolio_nav' %>
+
   <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
-<%= yield %>
+  <%= yield %>
 
   <%= render 'shared/portfolio_footer' %>
 
-<!--end of footer-->
-<%#= render 'shared/application_nav' %>
+  <%= alerts %>
+
 
 <%= source_helper("Portfolio") %>
 
