--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -2,7 +2,7 @@
   <% if blog.errors.any? %>
     <div id="error_explanation">
       <% blog.errors.full_messages.each do |error| %>
-        <%= js add_gritter(error, :title => "Errors!", :sticky => false) %>
+        <%= alert_generator error %>
       <% end %>
       </ul>
     </div>
