--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
 
           <%= yield %>
 
-          <%= render 'shared/alerts' %>
-
           <%= render 'shared/application_footer' %>
+
+          <%= alerts %>
 
           <%= source_helper("Application") %>
 
