--- a/app/views/portvolios/_form.html.erb
+++ b/app/views/portvolios/_form.html.erb
@@ -2,7 +2,7 @@
   <% if portfolio_item.errors.any? %>
     <div id="error_explanation">
       <% portfolio_item.errors.full_messages.each do |error| %>
-        <%= js add_gritter(error, :title => "Errors!", :sticky => false) %>
+        <%= alert_generator error %>
       <% end %>
       </ul>
     </div>
