--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,7 +156,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 62rem;
   }
 }
 
@@ -204,4 +204,13 @@ body {
 
 .app-footer {
   color: white;
+}
+
+.tech-news {
+  padding: 20px;
+  color: black;
+}
+
+.tech-news a {
+  color: blue;
 }
