--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,5 +1,5 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Development</h1>
+  <h1 class="cover-heading">Rails news</h1>
 
   <div class="row">
     <% @tweets.each do |tweet| %>
@@ -13,7 +13,3 @@
     <% end %>
   </div>
 </div>
-
-
-
-
