--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Welcome.</h1>
+  <h1 class="cover-heading">Welcome, <%= current_user.name %></h1>
   <p class="lead">
     If you are still searching for that one person who will change your life, take a look in the mirror. Any work you put in 100% then you will be successfull
   </p>
