--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -11,25 +11,8 @@
 <%= link_to 'Edit', edit_blog_path(@blog), class: 'btn btn-primary' if logged_in?(:site_admin) %>
 <%= link_to 'Back', blogs_path, class: 'btn btn-primary' if logged_in?(:site_admin) %>
 
+<%= render 'comments/comment_form' %>
 
-<!--  url: '#' because you want to create a comment inside the same form-->
-<!--  if you pass create action path then it will open in a new form - default-->
-  <% unless current_user.is_a? GuestUser %>
-    <%= form_for (@comment), url: '#' do |f| %>
-
-      <div class="form-group">
-        <br>
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
-      </div>
-
-    <%end %>
-  <% end %>
-
-  <%= render @blog.comments %>
+<%= render @blog.comments %>
 
 </div>
