--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -160,6 +160,7 @@ h6, .h6 {
 
 .blog-footer {
   padding: 2.5rem 0;
+  margin-top: 20px;
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
@@ -175,4 +176,17 @@ h6, .h6 {
 
 .social-links {
   font-size: 2.5em;
+}
+
+.comment-card {
+  margin-top: 20px;
+}
+
+.comment-attributions {
+  font-size: 0.8em;
+  font-style: italic;
+}
+
+.comment-name {
+  font-weight: 800;
 }
