--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -30,6 +30,14 @@
   </div>
 
   <div class="form-group">
+    <%= form.radio_button :status, 'draft' %>
+    <%= form.label 'Draft' %>
+
+    <%= form.radio_button :status, 'published' %>
+    <%= form.label 'Published' %>
+  </div>
+
+  <div class="form-group">
     <%= form.submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
