--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.submit 'Add a Comment', class: 'btn btn-primary' %>
+      <%= f.submit 'Add Comment', class: 'btn btn-primary' %>
     </div>
 
   <%end %>
