--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,14 +1,9 @@
 <div class="blog-post">
   <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
   <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.updated_at, Time.now) %> ago</p>
-  <% if logged_in?(:site_admin) %>
-    <p class="blog-post-meta">
-      <%= link_to blog.status, toggle_status_blog_path(blog) %> /
-      <%= link_to 'Show', blog %> /
-      <%= link_to 'Edit', edit_blog_path(blog) %> /
-      <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
-    </p>
-  <% end %>
+
+  <%= render partial: 'admin_notifications', locals: { blog: blog } %>
+
 </div><!-- /.blog-post -->
 
 <p>
