--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -2,7 +2,7 @@
   <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
   <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.updated_at, Time.now) %> ago</p>
 
-  <%= render partial: 'admin_notifications', locals: { blog: blog } %>
+  <%= render partial: 'blogs/admin_notifications', locals: { blog: blog } %>
 
 </div><!-- /.blog-post -->
 
