--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,10 +1,15 @@
-<div class="blog-masthead">
-  <div class="container">
-    <nav class="nav blog-nav">
-      <%= nav_helper 'nav-link', 'span' %>
-      <%= login_helper 'nav-link' %>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light blog-nav">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <%= link_to "Nikhil Chikorde", root_path, class: 'navbar-brand' %>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <%= nav_helper 'nav-link', 'li' %>
+      <li class="nav-item">
+        <%= login_helper 'nav-link' %>
+      </li>
+    </ul>
   </div>
-</div>
-
-
+</nav>
