Added custom styling to session source for blogs and portfolio page

--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -6,5 +6,9 @@
       <%= link_to "Find our more About me", about_me_path, class: 'btn btn-primary' %>
       <%= link_to "My Blog", blogs_path, class: 'btn btn-primary' %>
     </p>
+
+    <div class="sidebar-module">
+      <%= source_helper 'alert alert-success' %>
+    </div>
   </div>
 </section>
