--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
 
+  <%= source_helper 'alert alert-info blog-source-sidebar' %>
+
 <!--  prevent nil error - creating a new blog will not have a topic so it will throw an error-->
   <% if @side_bar_topic %>
     <div class="sidebar-module">
