--- a/app/views/portvolios/_portfolio_item.html.erb
+++ b/app/views/portvolios/_portfolio_item.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-4">
   <div class="card mb-4 shadow-sm">
-    <%= image_tag portfolio_img(portfolio_item.thumb_image, "thumb") %>
+    <%= image_tag portfolio_img(portfolio_item.thumb_image, "thumb"), width: '100%'; %>
     <div class="card-body", data-id="<%= portfolio_item.id %>">
       <p class="card-text">
         <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
