--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,17 +1,21 @@
-<h1>About Me</h1>
+<div class="app-card-container">
+  <div class="card">
+    <h1>About Me</h1>
 
-<hr>
+    <hr>
 
-<div class="row">
-  <div class="col-md-5">
-    <%= image_tag "facebook.jpg", width: 320, alt: 'profile' %>
-  </div>
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "facebook.jpg", width: 300, alt: 'profile', class: 'profile-img' %>
+      </div>
 
-  <div class="col-md-7">
-    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
-      years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin</p>
+      <div class="col-md-8">
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
+          years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin</p>
 
-    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
-      randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+          randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+      </div>
+    </div>
   </div>
 </div>
