Added progress bar for skills on about me page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -230,3 +230,12 @@ body {
 .profile-img {
   border: 1px solid grey;
 }
+
+.card-body {
+  margin-top: 5px;
+}
+
+.skill {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
