--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,6 +7,25 @@
     <div class="row">
       <div class="col-md-4">
         <%= image_tag "facebook.jpg", width: 300, alt: 'profile', class: 'profile-img' %>
+
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <div class="skill">
+              <h4><%= skill.title %></h4>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated"
+                     role="progressbar"
+                     aria-valuenow="<%= skill.percent_utilized %>"
+                     aria-valuemin="0"
+                     aria-valuemax="100"
+                     style="width: <%= skill.percent_utilized %>%"
+                ></div>
+              </div>
+            </div>
+
+          <% end %>
+        </div>
+
       </div>
 
       <div class="col-md-8">
@@ -15,6 +34,79 @@
 
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
           randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+
+        <p>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controller="jobHistory"
+          >
+              Job History
+          </button>
+
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controller="jobHistory"
+          >
+            Education
+          </button>
+
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#schools"
+            aria-expanded="false"
+            aria-controller="jobHistory"
+          >
+            School
+          </button>
+
+        </p>
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-body">
+              Dentsply Implants
+            </div>
+
+            <div class="card card-body">
+              LabCentrix LLC
+            </div>
+
+            <div class="card card-body">
+              Inno360
+            </div>
+          </div>
+
+        <div class="collapse" id="education">
+          <div class="card card-body">
+            Masters - CS
+          </div>
+
+          <div class="card card-body">
+            Bachelors - IT
+
+          </div>
+        </div>
+
+        <div class="collapse" id="schools">
+          <div class="card card-body">
+            University of New Haven
+          </div>
+
+          <div class="card card-body">
+            Rajiv Gandhi Institute of Technology
+          </div>
+        </div>
+
+        </p>
       </div>
     </div>
   </div>
