Changed the video url to render on page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <div class="cover-container">
 
           <%= video_tag(
-              'lightnin.mp4',
+              'lightning.mp4',
               id: 'background',
               autoplay: true,
               loop: true,
