Changed the size of the video

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
               id: 'background',
               autoplay: true,
               loop: true,
-              poster: 'light.jpg'
+              poster: 'light.jpg',
+              size: "320x240"
               ) %>
 
 
